--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Build Bazzite
 on:
   pull_request:
     branches:
+      - main
       - testing
       - unstable
     paths-ignore:
@@ -16,6 +17,7 @@ on:
       - ".github/workflows/build_iso*.yml"
   push:
     branches:
+      - main
       - testing
       - unstable
     paths-ignore:
