Fix pull registry name in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
           #
           # Define push and pull registries
           #
-          PULL_REGISTRY=ghcr.io/shape-error
+          PULL_REGISTRY=ghcr.io/shape-err
           PUSH_REGISTRY=ghcr.io/${{ github.repository_owner }}
           echo "push_registry=${PUSH_REGISTRY}" >> $GITHUB_OUTPUT
           echo "pull_registry=${PULL_REGISTRY}" >> $GITHUB_OUTPUT
