--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,6 @@ on:
       - ".github/workflows/build_iso*.yml"
   push:
     branches:
-      - main
       - testing
       - unstable
     paths-ignore:
@@ -111,12 +110,12 @@ jobs:
           #
           # Define push and pull registries
           #
-          PULL_REGISTRY=ghcr.io/shape-err
+          PULL_REGISTRY=ghcr.io/ublue-os
           PUSH_REGISTRY=ghcr.io/${{ github.repository_owner }}
           echo "push_registry=${PUSH_REGISTRY}" >> $GITHUB_OUTPUT
           echo "pull_registry=${PULL_REGISTRY}" >> $GITHUB_OUTPUT
           
-          echo "output_image=${PULL_REGISTRY}/${{ matrix.image }}" >> $GITHUB_OUTPUT
+          echo "output_image=ghcr.io/${{ github.actor }}/${{ matrix.image }}" >> $GITHUB_OUTPUT
           BASE_IMAGE="${PULL_REGISTRY}/$BASE_IMAGE_NAME-${{ matrix.base_image_flavor }}:${{ matrix.fedora_version }}"
           echo "base_image=${BASE_IMAGE}" >> $GITHUB_OUTPUT
 
